# TeamFlow

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  SECURITY.md  dev.sh  pyproject.toml  setup-dev.sh
.github/workflows/: ci.yml  security.yml
teamflow/: __init__.py  main.py
teamflow/ai/: __init__.py
teamflow/core/: config.py
teamflow/db/: database.py
teamflow/templates/: index.html
tests/: conftest.py  test_config.py  test_main.py
